// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manifest tools get-manifest-manifest should get all manifests 1`] = `
{
  "content": [
    {
      "text": "[{"name":"@umbraco-cms/backoffice","id":"00000000-0000-0000-0000-000000000000","version":"17.0.0","extensions":[]},{"name":"Clean","id":"00000000-0000-0000-0000-000000000000","version":"7.0.1","extensions":[{}]}]",
      "type": "text",
    },
  ],
}
`;

exports[`manifest tools get-manifest-manifest-private should get private manifests 1`] = `
{
  "content": [
    {
      "text": "[{"name":"@umbraco-cms/backoffice","id":"00000000-0000-0000-0000-000000000000","version":"17.0.0-rc4","extensions":[]},{"name":"Clean","id":"00000000-0000-0000-0000-000000000000","version":"7.0.0","extensions":[{}]}]",
      "type": "text",
    },
  ],
}
`;

exports[`manifest tools get-manifest-manifest-public should get public manifests 1`] = `
{
  "content": [
    {
      "text": "[]",
      "type": "text",
    },
  ],
}
`;
